--- a/css/styles.css
+++ b/css/styles.css
@@ -2,24 +2,23 @@ h1{
 	font-size: 45px !important;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
-	background-color: #B0C4DE
+	background-color: #F1F2F1
 }
 
 .page-title{
 	border-bottom: 1px solid #c5c5c5;
-	background-color: #B0C4DE
+	background-color: #F1F2F1
 }
 
 small{
 	color: #777 !important;
-	background-color: #B0C4DE
+	background-color: #F1F2F1
 }
 
 
 p{
 	font-size: 14px;
-	color: #00539F;
-	background-color: #B0C4DE
+	background-color: #F1F2F1
 }
 
 
@@ -27,10 +26,10 @@ p{
     padding-bottom: 9px;
     margin: 40px 0 20px;
     border-bottom: 1px solid #eee;
-    background-color: #B0C4DE
+    background-color: #F1F2F1
 }
 
 .container-gral{
 	padding-top: 70px;
-	background-color: #B0C4DE
+	background-color: #F1F2F1
 }
